# Advent-of-Code-2022

./: .gitignore  README.md
C/: CMakeLists.txt  all_days.h  main.c
C++/: CMakeLists.txt  all_days.h  main.cpp
C++/days/: day_1.cpp  day_1.h  day_10.cpp  day_10.h  day_11.cpp  day_11.h  day_12.cpp  day_12.h  day_2.cpp  day_3.cpp  day_4.cpp  day_4.h  day_5.cpp  day_6.cpp  day_6.h  day_7.cpp  day_7.h  day_8.cpp  day_8.h  day_9.cpp  day_9.h
C/days/: day_1.c  day_1.h  day_2.c  day_2.h  day_3.c  day_3.h  day_4.c  day_5.c  day_5.h  day_6.c  day_7.c  day_8.c
Python/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py
Rust/: Cargo.toml
Rust/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  formatted.txt  input.txt  main.rs
