cmake_minimum_required(VERSION 3.24)
project(C++)

set(CMAKE_CXX_STANDARD 23)

add_executable(C++ main.cpp days/day_1.cpp days/day_1.h all_days.h days/day_2.cpp days/day_2.h days/day_3.cpp days/day_3.h days/day_4.cpp days/day_4.h days/day_5.cpp days/day_5.h days/day_6.cpp days/day_6.h days/day_7.cpp days/day_7.h days/day_8.cpp days/day_8.h)
